--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 DERBY_URL=jdbc:derby://localhost:1527/
-DERBY_TABLE=
-DERBY_DB=
+DERBY_TABLE=testing
+DERBY_DB=test
 
 
-MONGO_URL=http://localhost:
-MONGO_DB=
+MONGO_URL=mongodb://localhost:27017/
+MONGO_DB=test
+MONGO_TABLE=testing
 
 
 
