--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "ts-node ./src/index.ts",
     "build": "webpack",
     "build:tsc": "tsc",
-    "dbtester": "node ./bin/dbrunner "
+    "dbrunner": "node ./bin/dbrunner "
   },
   "dependencies": {
     "@types/node": "^14.14.37",
@@ -16,11 +16,13 @@
     "fs": "^0.0.1-security",
     "jdbc": "^0.7.4",
     "mongodb": "^3.6.5",
+    "progress": "^2.0.3",
     "rxjs": "^6.6.6",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.10",
+    "@types/progress": "^2.0.3",
     "@types/yargs": "^16.0.1",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
